update in code index1.html to index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
 <section id="nav-bar">
     <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href="./index1.html">Treasury Bank</a>
+        <a class="navbar-brand" href="./index.html">Treasury Bank</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -20,7 +20,7 @@
 
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="./index1.html">Home </a>
+              <a class="nav-link" href="./index.html">Home </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#about" >About Us</a>
