--- a/customers.html
+++ b/customers.html
@@ -16,7 +16,7 @@
 <body>
     <!-- navbar starts here  -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="./index1.html">Treasury Bank</a>
+        <a class="navbar-brand" href="./index.html">Treasury Bank</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -25,7 +25,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="./index1.html">Home </a>
+                    <a class="nav-link" href="./index.html">Home </a>
                 </li>
                 <li class="nav-item  active">
                     <a class="nav-link" href="./customers.html">Send Money</a>
